Increase Buddybar z-index for better compatibility with Twenty Eleven WP theme. Fixes #3891. Props j.conti, ppaire.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@5654 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-core/css/buddybar.dev.css
+++ b/bp-core/css/buddybar.dev.css
@@ -6,11 +6,10 @@ body.wp-admin {
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 99;
 	height: 25px;
 	font-size: 11px;
 	width: 100%;
-	z-index: 1000;
+	z-index: 9999;
 }
 #wp-admin-bar .padder {
 	position: relative;
